...
                                                    <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="13"/>
                                                    <color key="textColor" name="YP-White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qzn-Qm-IMm" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_off"/>
                                                    <connections>
                                                        <action selector="imageListCellDidTapLike:" destination="IRS-hG-ozn" eventType="touchDown" id="eib-tO-ifJ"/>
                                                    </connections>
...
                                <connections>
                                    <outlet property="delegate" destination="wmv-0X-E2V" id="kYO-UE-6aa"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dDd-z0-755">
                                <rect key="frame" x="16" y="15" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackButton"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="wmv-0X-E2V" eventType="touchDown" id="YPj-oF-z2A"/>
                                </connections>
                            </button>
...
