...
    weak var delegate: WebViewViewControllerDelegate?
    private var progressView = UIProgressView()
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
        addProgressView()
        estimatedProgressObservation = webView.observe(
            \.estimatedProgress,
             options: [],
...
